--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -1,37 +1,44 @@
-{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block content
-    %}
-    <form method="POST">
-      <h3 style="text-align:center">Sign Up</h3>
-      <div class="form-group">
-          <label for="text">Username</label>
-          <input
-            type="text"
-            name="username"
-            id="username"
-            class="form-control"
-            placeholder="Enter Username"
-          />
-          <label for="password">Password</label>
-          <input
-            type="password"
-            name="password1"
-            id="password2"
-            class="form-control"
-            placeholder="Enter Password"
-          />
-          <label for="password">Password Again</label>
-          <input
-            type="password"
-            name="password2"
-            id="password2"
-            class="form-control"
-            placeholder="Enter Again"
-          />
-        <br />
-        <div style="text-align:center">
-          <button class="btn btn-primary" type="submit">Sign Up</button>
-        </div>
-      </div>
-    </form>
-    {% endblock %}
-    
+{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
+content %}
+<form method="POST">
+  <h3 style="text-align: center">Sign Up</h3>
+  <div class="form-group">
+    <label for="text">Email Address</label>
+    <input
+      type="text"
+      name="email"
+      id="email"
+      class="form-control"
+      placeholder="Enter Email"
+    />
+    <label for="text">Username</label>
+    <input
+      type="text"
+      name="username"
+      id="username"
+      class="form-control"
+      placeholder="Enter Username"
+    />
+    <label for="password">Password</label>
+    <input
+      type="password"
+      name="password1"
+      id="password2"
+      class="form-control"
+      placeholder="Enter Password"
+    />
+    <label for="password">Password Again</label>
+    <input
+      type="password"
+      name="password2"
+      id="password2"
+      class="form-control"
+      placeholder="Enter Again"
+    />
+    <br />
+    <div style="text-align: center">
+      <button class="btn btn-primary" type="submit">Sign Up</button>
+    </div>
+  </div>
+</form>
+{% endblock %}
